# timetracker_front

./: .gitignore  README.md  index.html  package-lock.json  package.json  vitest.config.js
src/: App.vue  main.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: conf.json
src-tauri/src/: lib.rs  main_sidecar.rs  worker.rs
src/assets/: base.css  cards.css  forms.css  index.css  infoDisplay.css  main.css  modal.css  palettes.css
src/components/: Info.vue  Overlay.vue  QueryForm.vue  StickyMenu.vue  StickyMenuMobile.vue  TimeDisplay.vue  TimeRecordCard.vue  TimerComponent.vue  UpdateLastTimerButton.vue
src/components/modals/: ConfirmDeleteModal.vue  Modal.vue  ModalFrame.vue  NewTagModal.vue  NewTaskModal.vue
src/components/select/: FlowSelect.vue  PeriodSelect.vue  SubtaskSelect.vue  TagSelect.vue  TaskSelect.vue
src/components/stats/: ApexBarChart.vue  ApexLineChart.vue  CustomBar.vue  GenericStats.vue  MeanTimeCard.vue  TaskRatioList.vue  TimerCountCard.vue
src/router/: index.js
src/stores/: flow.js  stats.js  tag.js  task.js  timeRecord.js
src/utils/: apiRequester.js  cleanObject.js  formatTime.js  getCurrentDateTime.js  getMinDate.js  markdownParser.js
src/views/: FlowView.vue  HomeView.vue  OldTimer.vue  RecordsSearchResult.vue  SearchTimeRecords.vue  SettingsView.vue  StatDiveView.vue  StatsDiveView.vue  StatsView.vue  TagView.vue  TaskView.vue  TimeRecords.vue  TimerFormView.vue  TimerView.vue
src/worker/: clock.js
