[package]
name = "timetracker"
version = "1.0.0"
description = "A zen timetracker where you define your own productivity"
authors = ["Romain Candusso"]
license = ""
repository = "https://github.com/CandussoR/timetracker_front"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
chrono = "0.4.40"

[features]
launch_binary = []
